Kubernetes/deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-devsecops-web
  namespace: python-devsecops
  labels: 
    app: python-devsecops-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-devsecops-web
  template:
    metadata:
      labels:
        app: python-devsecops-web
    spec:
      containers:
      - name: python-devsecops-web
        image: ahmed277/python-devsecops
        ports:
        - containerPort: 5000
