Kubernetes/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-devsecops-web-service
  namespace: python-devsecops
spec:
  type: LoadBalancer
  selector:
    app: python-devsecops-web
  ports:
  - port: 80
    targetPort: 5000
