Kubernetes/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: python-devsecops
spec:
  type: ClusterIP
  selector:
    app: python-devsecops-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
